redirect navbar to docs

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -70,8 +70,8 @@
           <a class="navbar-item" href="/expansion/">
             Expansion
           </a>
-          <a class="navbar-item" href="/blog">
-            Blog
+          <a class="navbar-item" href="/info/docs">
+            Docs
           </a>
           
         </div>
