--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -70,7 +70,7 @@
           <a class="navbar-item" href="/expansion/">
             Expansion
           </a>
-          <a class="navbar-item" href="/info/docs">
+          <a class="navbar-item" href="/info/docs/">
             Docs
           </a>
           
