replacing duckdb by sqlite to enable concurrency

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -73,6 +73,9 @@
           <a class="navbar-item" href="/info/docs/">
             Docs
           </a>
+          <a class="navbar-item" href="/up/">
+            Annotate
+          </a>
           
         </div>
         
