--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <p class="subtitle">
-                Wellcome to ChemOrigins, a community-based effort to build a database
+                Welcome to ChemOrigins, a community-based effort to build a database
                 for <b>Prebiotic Chemistry</b>. Specifically, we aim to compile experimentally
                 tested prebiotic pathways to produce biomolecules or other molecules relevant for
                 the <b>Origin of Life</b>.
@@ -105,18 +105,11 @@
             </div>
             <div class="column">
                 <p>
-                    Although there are endless debates about the Origin of Life, most
-                    scientists would agree that life emerged from chemistry. The question
-                    is "which chemistry". Most prebiotic chemists try to explain how
-                    complex biomolecules would emerge the chemistry that was feasible
-                    in the ancient-Earth where life originated around 3.8 Gya. 
+                    While the Origin of Life remains a topic of ongoing debate, there is a broad consensus among scientists that life emerged from chemical processes. The key question is: "Which chemical processes?" Prebiotic chemists focus on explaining how complex biomolecules could have arisen from the chemical conditions present on the early Earth, around 3.8 billion years ago.
                 </p>
                 <br>
                 <p>
-                    Prebiotic chemistry is a unique field that requires understanding
-                    biology, chemistry and geology simulatenously. <b>Although the goal is 
-                    extraordinarily challenging, prebiotic chemistry has reached many
-                    different milestones, such as the synthesis of nucleosides or aminoacids.</b>
+                    Prebiotic chemistry is a distinctive interdisciplinary field that integrates knowledge from biology, chemistry, and geology. Although the goals are extraordinarily challenging, the field has achieved numerous significant milestones, including the synthesis of nucleosides and amino acids.
                 </p>
             </div>
         </div>
@@ -127,19 +120,12 @@
             </div>
             <div class="column">
                 <p>
-                    After the first succesful prebiotic chemistry experiments, in 1953, prebiotic chemists
-                    have generated a great amount of knowledge about the prebiotically viable conidtions
-                    that would allow the formation of biomolecules in the deep-past. However, navigating
-                    this knowledge is far from trivial, usually requiring endless hours of literature
-                    digest.
+                    Since the first successful prebiotic chemistry experiments in 1953, researchers have amassed a wealth of knowledge about the conditions that could have supported the formation of biomolecules on the early Earth. However, navigating this vast body of knowledge can be challenging, often demanding extensive literature review.
             
                 </p>
                 <br>
                 <p>
-                    Scientists in other adjacent fields have benefited from having comprehensive databases
-                    allowing scientists and machines to access the data free of cost. <b>Therefore, we aspire to become 
-                    an important source to retrieve information about prebiotic chemistry</b>.
-
+                    Scientists in related fields have benefited greatly from comprehensive databases that provide free access to data for both researchers and automated systems. Therefore, we aim to become a vital resource for retrieving information about prebiotic chemistry.
                 </p>
             </div>
         </div>
@@ -152,20 +138,16 @@
             </div>
             <div class="column">
                 <p>
-                    ChemOrigins provides access to a knowledge graph of prebiotic chemistry,
-                    where molecules have been connected with the reactions that produce
-                    them or consume them, and the reactions with the evidence where they
-                    were detected. This is possible through the literature curation of
-                    experimental prebiotic chemistry and the analysis of such a knowledge
-                    using a graph database. 
-            
+                    ChemOrigins offers access to a comprehensive knowledge graph focused on prebiotic chemistry. This graph connects molecules with the reactions that produce or consume them, as well as the evidence supporting these reactions. This is achieved through the curation of experimental prebiotic chemistry literature and the analysis of this knowledge using a graph database.
                 </p>
                 <br>
                 <p>
-                    Questions such as "how can be alanine abiotically produced?",
-                    "under which temperatures has the synthesis of nucleotides measured?"
-                    or "which reactions are catalyzed by magnetite" are the kind of questions
-                    that we aim to address with this database.
+                    With ChemOrigins, you can explore questions such as: "How can alanine be abiotically produced?",
+                    "At what temperatures has the synthesis of nucleotides been measured?" or
+                    "Which reactions are catalyzed by magnetite?""
+                </ul>
+                <p>
+                    Our goal is to provide answers to these and other complex queries through our database.
 
                 </p>
             </div>
@@ -180,9 +162,7 @@
             </div>
             <div class="column">
                 <p>
-                    You can contribute by joining the discussion in the Github repository. You
-                    can either start new threads in the issues, or fork the
-                    repository to annotate new reactions.
+                    You can contribute by joining the discussion in the GitHub repository. You can either start new threads in the issues section or fork the repository to annotate new reactions.
                 </p>
                 
             </div>
@@ -205,9 +185,7 @@
             </div>
             <div class="column one-third">
                 <p>
-                    The database was built and is currently mantained
-                    by the Kaçar lab at the University of Wisconsin-Madison,
-                    and by Bruno Cuevas-Zuviría at the Universidad Politécnica de Madrid
+                    The database was developed and is currently maintained by the Kaçar Lab at the University of Wisconsin-Madison and by Bruno Cuevas-Zuviría at the Universidad Politécnica de Madrid.
                 </p>
                 
             </div>
