Fixing bugs on results and adding a help banner on navbar

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -118,14 +118,15 @@
       
 
     </nav>
-    <!-- <div class="hero is-small is-warning">
+    <div class="hero is-small is-warning">
       <div class="hero-body">
           <p>
-              We are collecting feedback! Please, fill out the form in this <a href="https://forms.fillout.com/t/2CXhdJVmKYus">link</a> and let us know what do you think
-              about this project!
+              ChemOrigins is an project under constant development! Let us know about issues or suggestions regarding
+              the web interface at
+               <a href="https://forms.fillout.com/t/e5pdseVYHius">this link</a>. We ❤️ your feedback! 
           </p>
       </div>
-    </div> -->
+    </div>
   
     <div id="content">{% block content %}{% endblock %}</div>
 
@@ -133,8 +134,12 @@
       <div class="content has-text-centered">
         <div class="container is-white">
         <p>
-          <strong>ChemOrigins</strong> by Bruno Cuevas. The website content
-          is licensed <a href="https://www.gnu.org/licenses/gpl-3.0.html">GNU GPL v3.0</a>.
+          <strong>ChemOrigins</strong> was developped by Bruno Cuevas at Kaçar lab. The website content
+          is licensed <a href="https://spdx.org/licenses/MIT.html">MIT</a>.
+          
+        </p>
+        <p>
+            Contact address: cuevaszuviri@wisc.edu
         </p>
         <div class="columns">
           <div class="column is-4"></div>
