--- a/app/templates/expansion.html
+++ b/app/templates/expansion.html
@@ -61,7 +61,7 @@
             <h1 class="title is-1"> Expansion </h1>
             <p>
                 In this page, you can explore the chemical space spanned by some reactants by
-                introducing their codes one by one, separated by a dot. Example: "pbm-000068.pbm-000047.pbm-000030."
+                introducing their codes one by one, separated by a dot. Example: "pbm-000068.pbm-000047.pbm-000030"
             </p>
             <br>
             <div class="field">
