bug in doi link

--- a/app/templates/source.html
+++ b/app/templates/source.html
@@ -30,7 +30,7 @@
             
             <tr>
                 <td scope="row"> DOI </th>
-                <td> <a href="https://doi.org/{{ doi }}"> {{ source.doi }} </a></td>
+                <td> <a href="https://doi.org/{{ source.doi }}"> {{ source.doi }} </a></td>
                 
             </tr>
 
