--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -134,7 +134,7 @@
       <div class="content has-text-centered">
         <div class="container is-white">
         <p>
-          <strong>ChemOrigins</strong> was developped by Bruno Cuevas at Kaçar lab. The website content
+          <strong>ChemOrigins</strong> was developed by Bruno Cuevas at Kaçar lab. The website content
           is licensed <a href="https://spdx.org/licenses/MIT.html">MIT</a>.
           
         </p>
